--- a/sc_mnist.ipynb
+++ b/sc_mnist.ipynb
@@ -1,28 +1,8 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": [],
-      "machine_shape": "hm",
-      "gpuType": "A100"
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    },
-    "accelerator": "GPU"
-  },
   "cells": [
     {
       "cell_type": "code",
-      "source": [
-        "!pip -q install torchdyn\n",
-        "!pip -q install torchcfm"
-      ],
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -30,11 +10,10 @@
         "id": "ioAv6TYPC7kL",
         "outputId": "b40ef08e-ff54-48be-bc11-004b5722d10f"
       },
-      "execution_count": null,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m58.1/58.1 kB\u001b[0m \u001b[31m2.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m363.4/363.4 MB\u001b[0m \u001b[31m3.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
@@ -55,6 +34,10 @@
             "\u001b[?25h"
           ]
         }
+      ],
+      "source": [
+        "!pip -q install torchdyn\n",
+        "!pip -q install torchcfm"
       ]
     },
     {
@@ -84,6 +67,11 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "9WnSMs0aELkS"
+      },
+      "outputs": [],
       "source": [
         "def warmup_lr(step, WARMUP=5000):\n",
         "    \"\"\"Simple warmup schedule from 0 to initial LR over first WARMUP steps.\"\"\"\n",
@@ -104,7 +92,7 @@
         "                           plot=False):\n",
         "    \"\"\"\n",
         "    Generate and save 32 samples using a simple Euler iteration from t=0 to t=1.\n",
-        "    Pseudocode reference:\n",
+        "    Article reference:\n",
         "      x ∼ N(0, I)\n",
         "      d ← 1/M\n",
         "      t ← 0\n",
@@ -126,8 +114,6 @@
         "    # 3) Simple Euler loop\n",
         "    for _ in range(total_steps):\n",
         "        # Compute the velocity/score sθ(x, t, d).\n",
-        "        # Exactly how you call the model depends on your forward signature.\n",
-        "        # If your model is something like: model(t, x, d=None), you’d do:\n",
         "        s = model(t, x, d=dt)\n",
         "\n",
         "        # Update x ← x + sθ(x, t, d)*d\n",
@@ -165,15 +151,15 @@
         "        target_dict[k].data.copy_(\n",
         "            target_dict[k].data * decay + source_dict[k].data * (1 - decay)\n",
         "        )\n"
-      ],
-      "metadata": {
-        "id": "9WnSMs0aELkS"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "J38wmqzuENzK"
+      },
+      "outputs": [],
       "source": [
         "############################\n",
         "# 2) MNIST Data Loader\n",
@@ -200,15 +186,27 @@
         "        pin_memory=True\n",
         "    )\n",
         "    return loader"
-      ],
-      "metadata": {
-        "id": "J38wmqzuENzK"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "YlJ6ClOQERYp",
+        "outputId": "c7d386b3-ea06-4afa-bd32-578c87ee10d5"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Model params: 15.19 M\n"
+          ]
+        }
+      ],
       "source": [
         "###########################\n",
         "# 3) Define U-Net for 1×28×28\n",
@@ -234,25 +232,23 @@
         "        :return: an output image of shape [B, C, H, W].\n",
         "        \"\"\"\n",
         "\n",
-        "        # -- 1) Flatten out the timesteps if needed --\n",
+        "        #1) Flatten out the timesteps if needed \n",
         "        timesteps = t\n",
         "        while timesteps.dim() > 1:\n",
         "            timesteps = timesteps[:, 0]\n",
         "        if timesteps.dim() == 0:\n",
         "            timesteps = timesteps.repeat(x.shape[0])\n",
         "\n",
-        "        # -- 2) Standard time embedding from parent code: --\n",
-        "        #    We create `emb` by embedding `timesteps` -> [B, model_channels*4],\n",
-        "        #    then passing through self.time_embed -> [B, model_channels*4].\n",
+        "        # 2) Timestep embedding\n",
         "        emb = self.time_embed(timestep_embedding(timesteps, self.model_channels))\n",
         "\n",
-        "        # -- 3) If class-conditional, add label embedding --\n",
+        "        # 3) If class-conditional, add label embedding \n",
         "        if self.num_classes is not None:\n",
         "            # parent class requires y if the model is class-cond\n",
         "            assert (y is not None), \"You must pass 'y' if the model is class-conditional\"\n",
         "            emb = emb + self.label_emb(y)\n",
         "\n",
-        "        # -- 4) If d is provided, embed it and add to emb --\n",
+        "        #4) If d is provided, embed it and add to emb\n",
         "        if d is not None:\n",
         "            d_ = d\n",
         "            while d_.dim() > 1:\n",
@@ -261,16 +257,8 @@
         "                d_ = d_.repeat(x.shape[0])\n",
         "\n",
         "            d_emb = self.time_embed(timestep_embedding(d_, self.model_channels))\n",
-        "            emb = emb + d_emb  # Just add them; or do something else if you prefer\n",
+        "            emb = emb + d_emb \n",
         "\n",
-        "        # -- 5) Now replicate the parent's UNet logic with `emb` --\n",
-        "        #    The parent UNetModel (guided-diffusion UNet) does something like:\n",
-        "        #      1) Convert x to self.dtype\n",
-        "        #      2) Pass through self.input_blocks\n",
-        "        #      3) Pass through self.middle_block\n",
-        "        #      4) Pass through self.output_blocks\n",
-        "        #      5) Final out layer\n",
-        "        #    We'll do the same here.\n",
         "\n",
         "        h = x.type(self.dtype)\n",
         "        hs = []\n",
@@ -293,7 +281,7 @@
         "net_model = UNetModelWrapperWithD(\n",
         "    dim=(1, 28, 28),      # 1 channel, 28×28\n",
         "    num_res_blocks=2,\n",
-        "    num_channels=128,      # smaller base than 128, since MNIST is easier\n",
+        "    num_channels=128,      \n",
         "    channel_mult=[1, 2],  # just one downsampling: 28->14\n",
         "    num_heads=4,\n",
         "    num_head_channels=64,\n",
@@ -307,27 +295,15 @@
         "# Print model size\n",
         "model_size = sum(p.numel() for p in ema_model.parameters())\n",
         "print(\"Model params: %.2f M\" % (model_size / 1024 / 1024))\n"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "YlJ6ClOQERYp",
-        "outputId": "c7d386b3-ea06-4afa-bd32-578c87ee10d5"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Model params: 15.19 M\n"
-          ]
-        }
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "vrU1mBAAES9K"
+      },
+      "outputs": [],
       "source": [
         "############################\n",
         "# 4) Flow Matching Trainer\n",
@@ -375,7 +351,7 @@
         "        optimizer, lr_lambda=lambda s: warmup_lr(s, WARMUP=WARMUP)\n",
         "    )\n",
         "\n",
-        "    # Simple MSE for velocity fields\n",
+        "    # MSE for velocity fields\n",
         "    loss_fn = nn.MSELoss()\n",
         "\n",
         "    # Close previous W&B run if present\n",
@@ -413,8 +389,6 @@
         "        # ====== 4) Flow Matching Loss for the first K items (d=0) ======\n",
         "        fm_loss = 0.0\n",
         "        if K>0:\n",
-        "            # Model forward => your signature might be model(t, x, d=...) or something else\n",
-        "            # We'll assume: model(t_batch, x_batch, d=...) -> velocity\n",
         "            pred_vel_fm = net_model(t_sample[:K], x_t[:K], d=d_vals[:K])\n",
         "            target_vel_fm = (x_real[:K] - x_noise[:K])  # x_1 - x_0\n",
         "            fm_loss = loss_fn(pred_vel_fm, target_vel_fm)\n",
@@ -444,7 +418,6 @@
         "            # Step 4: predict net_model(t, x_t, 2*d)\n",
         "            pred_s = net_model(t_cons, x_t_cons, d=2.0*d_cons)\n",
         "\n",
-        "            # Step 5: MSE\n",
         "            consistency_loss = loss_fn(pred_s, s_target)\n",
         "\n",
         "        total_loss = fm_loss + consistency_loss\n",
@@ -502,31 +475,11 @@
         "\n",
         "    print(\"Training completed!\")\n",
         "    wandb.finish()\n"
-      ],
-      "metadata": {
-        "id": "vrU1mBAAES9K"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "############################\n",
-        "# 5) Run Training\n",
-        "############################\n",
-        "if __name__ == \"__main__\":\n",
-        "    train_flowmatching_shortcut(\n",
-        "        net_model = net_model,\n",
-        "        ema_model = ema_model,\n",
-        "        TOTAL_STEPS=60001,\n",
-        "        BATCH_SIZE=64,\n",
-        "        LR=1e-4,\n",
-        "        GRAD_CLIP=1.0,\n",
-        "        SAVE_STEP=1000,\n",
-        "        WARMUP=3000\n",
-        "    )"
-      ],
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -535,7 +488,6 @@
         "id": "Pm7Q9ZgpEUw2",
         "outputId": "c6b4df72-deb7-4a34-cccd-e31f7f53167a"
       },
-      "execution_count": null,
       "outputs": [
         {
           "data": {
@@ -598,73 +550,106 @@
           "output_type": "display_data"
         },
         {
-          "output_type": "stream",
           "name": "stderr",
+          "output_type": "stream",
           "text": [
             "ShortcutTrainer: 100%|██████████| 60001/60001 [2:57:46<00:00,  5.63it/s, fm=0.1476, cons=0.0008, loss=0.1484]"
           ]
         },
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Training completed!\n"
           ]
         },
         {
-          "output_type": "stream",
           "name": "stderr",
+          "output_type": "stream",
           "text": [
             "\n"
           ]
         },
         {
-          "output_type": "display_data",
           "data": {
+            "text/html": [],
             "text/plain": [
               "<IPython.core.display.HTML object>"
-            ],
-            "text/html": []
+            ]
           },
-          "metadata": {}
+          "metadata": {},
+          "output_type": "display_data"
         },
         {
-          "output_type": "display_data",
           "data": {
-            "text/plain": [
-              "<IPython.core.display.HTML object>"
-            ],
             "text/html": [
               "<br>    <style><br>        .wandb-row {<br>            display: flex;<br>            flex-direction: row;<br>            flex-wrap: wrap;<br>            justify-content: flex-start;<br>            width: 100%;<br>        }<br>        .wandb-col {<br>            display: flex;<br>            flex-direction: column;<br>            flex-basis: 100%;<br>            flex: 1;<br>            padding: 10px;<br>        }<br>    </style><br><div class=\"wandb-row\"><div class=\"wandb-col\"><h3>Run history:</h3><br/><table class=\"wandb\"><tr><td>consistency_loss</td><td>▁▃▂▂▂▃▁▂▂▁█▃▂▁▃▂▃▂▂▂▂▂▂▁▁▃▁▂▄▂▂▂▁▃▂▁▂▂▂▂</td></tr><tr><td>fm_loss</td><td>▃▅▁▅▆▇▄▄▆▅▇▅▇▇▅▄▅▆▆▃▆▇▅▇▅▄▅▄▅█▃▆▅▅▆▅▄▃▁█</td></tr><tr><td>step</td><td>▁▁▁▂▂▂▂▂▂▃▃▃▃▃▃▃▃▄▄▄▄▅▅▅▅▆▆▆▆▆▇▇▇▇▇▇████</td></tr><tr><td>total_loss</td><td>▃▃▇▃▃▆▄▅▅▆▃▃▁█▆▆▂▃▅▃▃▂▅▄▃▅▄▅▅▇▁▂▄▄▆▂▄▆▇▂</td></tr></table><br/></div><div class=\"wandb-col\"><h3>Run summary:</h3><br/><table class=\"wandb\"><tr><td>consistency_loss</td><td>0.00081</td></tr><tr><td>fm_loss</td><td>0.14763</td></tr><tr><td>step</td><td>60000</td></tr><tr><td>total_loss</td><td>0.14844</td></tr></table><br/></div></div>"
-            ]
-          },
-          "metadata": {}
-        },
-        {
-          "output_type": "display_data",
-          "data": {
+            ],
             "text/plain": [
               "<IPython.core.display.HTML object>"
-            ],
+            ]
+          },
+          "metadata": {},
+          "output_type": "display_data"
+        },
+        {
+          "data": {
             "text/html": [
               " View run <strong style=\"color:#cdcd00\">serene-jazz-7</strong> at: <a href='https://wandb.ai/wladgrm-skolkovo-institute-of-science-and-technology/fm-shortcut/runs/ltojqrz2' target=\"_blank\">https://wandb.ai/wladgrm-skolkovo-institute-of-science-and-technology/fm-shortcut/runs/ltojqrz2</a><br> View project at: <a href='https://wandb.ai/wladgrm-skolkovo-institute-of-science-and-technology/fm-shortcut' target=\"_blank\">https://wandb.ai/wladgrm-skolkovo-institute-of-science-and-technology/fm-shortcut</a><br>Synced 5 W&B file(s), 0 media file(s), 0 artifact file(s) and 60 other file(s)"
-            ]
-          },
-          "metadata": {}
-        },
-        {
-          "output_type": "display_data",
-          "data": {
+            ],
             "text/plain": [
               "<IPython.core.display.HTML object>"
-            ],
-            "text/html": [
-              "Find logs at: <code>./wandb/run-20250407_205743-ltojqrz2/logs</code>"
             ]
           },
-          "metadata": {}
+          "metadata": {},
+          "output_type": "display_data"
+        },
+        {
+          "data": {
+            "text/html": [
+              "Find logs at: <code>./wandb/run-20250407_205743-ltojqrz2/logs</code>"
+            ],
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ]
+          },
+          "metadata": {},
+          "output_type": "display_data"
         }
+      ],
+      "source": [
+        "############################\n",
+        "# 5) Run Training\n",
+        "############################\n",
+        "if __name__ == \"__main__\":\n",
+        "    train_flowmatching_shortcut(\n",
+        "        net_model = net_model,\n",
+        "        ema_model = ema_model,\n",
+        "        TOTAL_STEPS=60001,\n",
+        "        BATCH_SIZE=64,\n",
+        "        LR=1e-4,\n",
+        "        GRAD_CLIP=1.0,\n",
+        "        SAVE_STEP=1000,\n",
+        "        WARMUP=3000\n",
+        "    )"
       ]
     }
-  ]
+  ],
+  "metadata": {
+    "accelerator": "GPU",
+    "colab": {
+      "gpuType": "A100",
+      "machine_shape": "hm",
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
